# bad

./: README.md  pyproject.toml
bad/: __init__.py  bad.py
